welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: method motif overrides nothing
override def motif() {for (i<-1 to 4) {avance(2);faireV()} 
             ^